# traffic-scene-graph-recognition

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  draft.md  pyproject.toml  pytest_results.txt  requirements.txt  run_tests.py  walkthrough.md
configs/: default.yaml
scripts/: calibrate_bev.py  dair_pipeline.py  generate_sample_data.py  inference.py  setup_linux.sh  train.py  video_to_scene_graph.py
src/traffic_scene_graph/: __init__.py
src/traffic_scene_graph/models/: __init__.py  edge_transformer.py  gated_residual.py  relation_classifier.py  scene_graph_model.py
src/traffic_scene_graph/training/: __init__.py  classification_loss.py  contrastive_loss.py  trainer.py
src/traffic_scene_graph/utils/: __init__.py  bev_transform.py  graph_builder.py  kalman_extrapolator.py  relation_labeler.py  zone_manager.py
tests/: test_bev_transform.py  test_classifier.py  test_dataset.py  test_e2e.py  test_graph_builder.py  test_model.py  test_relation_labeler.py  test_zone_manager.py
